--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,9 +3,9 @@
     <div class="row">
       <div class="col-md-1 col-lg-1"></div>
       <div class="col-md-10 col-lg-10">
-              <h1 class="cover-heading">Hi, i'm <span>Miroslav Maksimovi&#263;.</span></h1>
+              <h1 class="cover-heading">안녕하세요! <span>조원진입니다!&#263;.</span></h1>
 
-              <h3 class="cover-profession">Web Developer</h3>
+              <h3 class="cover-profession">제주대학교 경제학과</h3>
           </div>
           <div class="col-md-1 col-lg-1"></div>
       </div>
@@ -14,7 +14,7 @@
           <div class="col-md-8">
 
             <div class="cover-description">
-                <p>I'm a Web Developer based in Belgrade, Serbia. Specialized in both back-end and front-end development. Possess considerable knowledge of the development of websites and web applications using PHP and MySQL. I'm currently working as a PHP Web Developer at <a href="http://corp.diwanee.com/" target="_blank">Diwanee</a>. Let's start learning more <a href="#profile">about me</a>.</p>
+                <p>저는 경제학과 3학년 조원진입니다. 늦은 시기에 프로그래밍에 관심을 갖게 되어서 컴퓨터공학과를 복수전공으로 듣게 되었습니다.저에 대한 더 자새한 내용은 <a href="#profile">profile</a>을 확인해 주시길 바랍니다.</p>
               </div>        
 
               <ul class="social">
