--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,13 +18,7 @@
               </div>        
 
               <ul class="social">
-                 <li><a href="https://www.facebook.com/miroslav.maksimovic.91" target="_blank"><i class="fa fa-facebook"></i></a></li>
-                 <li><a href="https://twitter.com/el_maksi" target="_blank"><i class="fa fa-twitter"></i></a></li>
-                 <li><a href="https://plus.google.com/101805645631944387599/posts" target="_blank"><i class="fa fa-google-plus"></i></a></li>
-                 <li><a href="http://rs.linkedin.com/in/miroslavmaksimovic" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-                 <li><a href="https://github.com/elmaxi" target="_blank"><i class="fa fa-github"></i></a></li>
-                 <li><a href="http://codepen.io/elmaxi/" target="_blank"><i class="fa fa-codepen"></i></a></li>
-                 <li><a href="http://jsfiddle.net/user/elmaxi/" target="_blank"><i class="fa fa-jsfiddle"></i></a></li>
+                 <li><a href="https://github.com/dnjs0309" target="_blank"><i class="fa fa-github"></i></a></li>
               </ul>
             </div>
         </div>
