--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -5,7 +5,7 @@
 				<div class="col-md-3 section-icon">
 				</div>
 				<div class="col-md-6">
-					<h1>Profile</h1>
+					<h1>프로필</h1>
 				</div>			
 			</div>
 			<div class="row">
@@ -25,8 +25,8 @@
                         </div>
 
                         <div class="profile-content timeline-content right">
-                          <label>Full name</label>
-                          <div class="value">Miroslav Maksimovi&#263;</div>
+                          <label>이름</label>
+                          <div class="value">조원진</div>
                         </div>
                       </div>                      
 
@@ -38,8 +38,8 @@
 
                         </div>
                         <div class="profile-content timeline-content left">
-                          <label>Location</label>
-                          <div class="value">Belgrade, Serbia</div>
+                          <label>집</label>
+                          <div class="value">인천광역시 서구</div>
                         </div>
                       </div> 
 
@@ -52,7 +52,7 @@
 
                         <div class="profile-content timeline-content right">
                           <label>Email</label>
-                          <div class="value">maksimovic991@gmail.com</div>
+                          <div class="value">dnjs0309@naver.com</div>
                         </div>
                       </div>
 
@@ -64,8 +64,8 @@
                         </div>
 
                         <div class="profile-content timeline-content left">
-                          <label>Phone</label>
-                          <div class="value">(381) 61 612 8262</div>
+                          <label>전화번호</label>
+                          <div class="value">010-3359-2166</div>
                         </div>
                       </div>
 
@@ -77,8 +77,8 @@
 
                         </div>
                         <div class="profile-content timeline-content right">
-                          <label>Availability</label>
-                          <div class="value">Not available for a job</div>
+                          <label>직업</label>
+                          <div class="value">대학생</div>
                         </div>
                       </div>                                          
 
@@ -93,12 +93,10 @@
 
 				<div class="profile-summary">
 	              <p>
-		            Enthusiastic and creative Web Developer with about 2 years of experience. Specialized in both back-end and front-end development. Possessing considerable knowledge of the development of websites and web applications using PHP programming language and MySQL. <br>
-		            Experience building WordPress driven websites.<br>
-                As a development environment I use LAMP and Vagrant which provides easy to configure, reproducible, and portable work environments.<br>
-		            A good knowledge of Laravel PHP Framework.<br>
-		            Quick learner who enjoys learning new skills and rapidly adapts to new technologies.<br>
-		            I'm currently working as a PHP Web Developer at <a href="http://corp.diwanee.com/" target="_blank">Diwanee</a>.
+		            금융과 IT의 융합, 핀테크에 대한 무한한 관심을 가지고 있는 경제학과 3학년 조원진입니다.<br>
+		            경제학과로써 정치, 사회에 관심이 많고, 정보 수집 및 분석하는 것을 좋아합니다.<br>
+		           주로 Dart, 국가통계포탈, kisvalue, kisline 을 이용해 자료 및 정보를 수집하고 엑셀, E-views, Spss 프로그램을 이용합니다.<br>
+		            최근에는 보험업에 관심이 많아 Soa 자격 시험을 준비중에 있습니다.<br>
 		            </p>
 	            </div>
 
