--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -7,63 +7,33 @@
 				<i class="fa fa-laptop fa-5x"></i>				
 			</div>
 			<div class="col-md-6">
-				<h1>Work Experience</h1>
+				<h1>장점</h1>
 			</div>			
 		</div>
 
 		<div class="row">
 			<div class="col-md-3"></div>
 			<div class="col-md-6">
-				<h3>PHP Web Developer</h3>
-				<p class="info">Diwanee<span> •</span> <em class="date">Jan 2015 - Present</em></p>
+				<h3>책임감</h3>
+				<p class="info">저는 군생활을 하며 누구보다 책임감이 강해졌다고 자부합니다.<br>군복무 당시 저는 육군훈련소 조교로 21개월간 복무를 하였고 21개월 간 아무런 이상 없이 2200명의 훈련병들을 훈육 및 교육시켰습니다.<br> 이 과정에서 가장 중요한 것이 그들이 나를 믿고 따르게 하는 것이였습니다. 믿음을 주는 가장 좋은 방법은 책임있는 모습이였습니다.<br>
+				항상 그들보다 먼저 일어나고 행동하며, 그들보다 늦게 자고, 뒤에서 챙겨주었습니다. 이러한 반복된 생활 속에서 저는 누구보다 책임감이 강해졌다고 자부합니다.</p>
 			</div>
 		</div>
 
 		<div class="row">
 			<div class="col-md-3"></div>
 			<div class="col-md-6">
-				<h3>Web Developer</h3>
-				<p class="info">DSTV Multimedia<span> •</span> <em class="date">Feb 2014 - May 2014</em></p>
-				<p>Responsibilities:</p>
-				<ul>
-					<li>Design, develop and improve company's websites.</li>
-					<li>Develop new sites using Wordpress.</li>
-					<li>Maintain existing sites.</li>
-					<li> Collaborate closely with the marketing team members to maintain, design and form content.</li>	
-					<li>Management of the company's hosting account.</li>
-				</ul>
+				<h3>성실함</h3>
+				<p class="info">초등학교, 중학교, 고등학교 지각, 결석 한번 한 적 없으며 고등학교 3년 동안 성실상을 받았습니다.<br>저는 작은 일이든 큰 일이든 저에게 맡겨진 일은 끝까지 끝날 때까지 해결합니다.</p>
 			</div>
 		</div>
 
 		<div class="row">			
 			<div class="col-md-3"></div>
 			<div class="col-md-6">
-                  <h3>Web Developer</h3>
-                  <p class="info">Soko Group<span> •</span> <em class="date">Oct 2013 - February 2014</em></p>
-					<p>Responsibilities:</p>
-                  <ul>
-					<li>Develop new as well as edit existing websites and write semantic markup.</li>
-					<li>Develop new sites using Wordpress.</li>
-					<li>Meeting with clients to identify their needs, discuss requirements and/or project progress.</li>
-					<li>Coordinate with clients and provide support.</li>
-					<li>Protects websites by taking security precautions.</li>
-					<li>Management of the company's hosting account.</li>
-				</ul>
+                  <h3>배려심</h3>
+                  <p class="info">어릴 때 부터 남들에게 도움을 주는 것을 좋아해 봉사활동을 자주 다녔습니다. 대학교 1학년 때는 주로 봉사동아리에 들어가 양로원, 병원 등에 가서 청소하는 단순 육체적 봉사활동을습니다.<br>대학교 2학년 이후로는 재능기부라는 새로운 봉사활동을 알게 되어 '삼성 야호 봉사단', 'sk 써니' 등 단체에 들어가 아동들에게 경제 교육 및 다양한 교육을 하는 봉사활동으로 다른 이들에게 도움이 되고자 노력합니다.</em></p>
 			</div>
 		</div>
-
-		<div class="row">			
-			<div class="col-md-3"></div>
-			<div class="col-md-6">
-                  <h3>Student Internship</h3>
-                  <p class="info">Statistical Office of the Republic of Serbia<span> •</span> <em class="date">July 2013 - August 2013</em></p>
-
-                  <p>
-                  The internship was in the form of a lectures. Employees from different departments were tasked to explain the practical application of database and application development. The internship was done as a requirement for graduation thesis.
-                  </p>
-			</div>
-		</div>
-
-
 	</div>
 </section>
