--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -15,7 +15,7 @@
 			<div class="col-md-3"></div>
 			<div class="col-md-6">
 				<h3>책임감</h3>
-				<p class="info">저는 군생활을 하며 누구보다 책임감이 강해졌다고 자부합니다.<br>군복무 당시 저는 육군훈련소 조교로 21개월간 복무를 하였고 21개월 간 아무런 이상 없이 2200명의 훈련병들을 훈육 및 교육시켰습니다.<br> 이 과정에서 가장 중요한 것이 그들이 나를 믿고 따르게 하는 것이였습니다. 믿음을 주는 가장 좋은 방법은 책임있는 모습이였습니다.<br>
+				<p class="info">저는 군생활을 하며 누구보다 책임감이 강해졌다고 자부합니다.<br>군복무 당시 저는 육군훈련소 조교로 21개월간 복무를 하였고 21개월 간 아무런 이상 없이 2200명의 훈련병들을 훈육 및 교육시켰습니다.<br> 이 과정에서 가장 중요한 것이 그들이 나를 믿고 따르게 하는 것이였습니다. <br>믿음을 주는 가장 좋은 방법은 책임있는 모습이였습니다.<br>
 				항상 그들보다 먼저 일어나고 행동하며, 그들보다 늦게 자고, 뒤에서 챙겨주었습니다. 이러한 반복된 생활 속에서 저는 누구보다 책임감이 강해졌다고 자부합니다.</p>
 			</div>
 		</div>
@@ -32,7 +32,7 @@
 			<div class="col-md-3"></div>
 			<div class="col-md-6">
                   <h3>배려심</h3>
-                  <p class="info">어릴 때 부터 남들에게 도움을 주는 것을 좋아해 봉사활동을 자주 다녔습니다. 대학교 1학년 때는 주로 봉사동아리에 들어가 양로원, 병원 등에 가서 청소하는 단순 육체적 봉사활동을습니다.<br>대학교 2학년 이후로는 재능기부라는 새로운 봉사활동을 알게 되어 '삼성 야호 봉사단', 'sk 써니' 등 단체에 들어가 아동들에게 경제 교육 및 다양한 교육을 하는 봉사활동으로 다른 이들에게 도움이 되고자 노력합니다.</em></p>
+                  <p class="info">어릴 때 부터 남들에게 도움을 주는 것을 좋아해 봉사활동을 자주 다녔습니다. <br>대학교 1학년 때는 주로 봉사동아리에 들어가 양로원, 병원 등에 가서 청소하는 단순 육체적 봉사활동을습니다.<br>대학교 2학년 이후로는 재능기부라는 새로운 봉사활동을 알게 되어 '삼성 야호 봉사단', 'sk 써니' 등 단체에 들어가 아동들에게 경제 교육 및 다양한 교육을 하는 봉사활동으로 다른 이들에게 도움이 되고자 노력합니다.</em></p>
 			</div>
 		</div>
 	</div>
