--- a/_includes/education.html
+++ b/_includes/education.html
@@ -6,17 +6,18 @@
 				<i class="fa fa-graduation-cap fa-5x"></i>	
 			</div>
 			<div class="col-md-6">
-				<h1>Education</h1>	
+				<h1>학력</h1>	
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-md-3"></div>
 			<div class="col-md-6">				
-				<h3>Business Informatics and e-business</h3>
-				<p class="info">Belgrade Business School (Bachelor of Applied Science) <span>•</span> <em class="date">2010 - 2013</em></p>
+				<h3>경제학</h3>
+				<p class="info">제주대학교 (학사과정) <span>•</span> <em class="date">2011 - 2016</em></p>
 
 				<p>
-				During the studies, which lasted three years, I have acquired a basic knowledge of programming(OOP), databases, computer networks, information systems design, internet marketing, e-business, web development and design. The school is a part of Microsoft DreamSpark, which is a Microsoft program to provide students with software design and development tools at no charge, so we used Visual Studio, MS SQL Server, and other development tools for free. As a programming language we used C#, and ASP.NET framework for web development. One of the most important subjects in the studies were a Databases, where each team worked on the project as a requirement for passing the exam. My team and I worked on "Designing a database for preschool" project. As a requirement for thesis,  I've done an intership in Statistical Office of the Republic of Serbia. Diploma thesis "The Concept of the Blog and the Blogosphere in Serbia" I passed with the highest grade.				
+				학사 과정을 이수하며 국내외 수많은 문제에 대해 이해하고 분석할 수 있게 되었으며 향 후 미래를 예측할 수 있는 능력을 얻었으며 이를 통해 근시안적인 사고에서 벗어나 미래지향적인 사고가 가능하게 되었습니다.
+하지만 학사 과정을 통해 얻게 된 가장 중요한 것은 기업, 사회 현상 및 사람의 경제 행동 등을 수식으로서 표현하여 일반화하는 것을 할 수 있게 되었으며 이를 엑셀, Spss, Eviews 를 사용하여 회귀분석, 시계열분석, 다중분석 등 다양한 분석을 통해 남들 보다 더 많고, 중요한 정보를 얻을 수 있게 되었습니다.			
 				</p>
 			</div>
 		</div>
@@ -24,11 +25,11 @@
 		<div class="row">
 			<div class="col-md-3"></div>
 			<div class="col-md-6">
-				<h3>Mechanical technician for computer engineering</h3>
-				<p class="info">Aviation Academy (IV degree) <span>•</span> <em class="date">2006 - 2010</em></p>
+				<h3>컴퓨터 공학</h3>
+				<p class="info">제주대학교 (학사과정) - 복수전공 <span>•</span> <em class="date">2011 - 2016</em></p>
 
 				<p>
-				Aviation Academy is the unique school in the region with eighty - eight- year – long tradition of training aviation personnel both in the field of civil and military aviation, certified by the European Aviation Safety Agency (EASA) and The Civil Aviation Directorate of the Republic of Serbia. Learning objectives for a period of four years for Mechanical technician for computer engineering is to train students for correct, accurate, creative and independent work in the form of various calculations, modeling parts, creating engineering drawings on computers, as well as the acquisition of other skills and knowledge in the broad field of mechanical engineering and metalworking.
+				학사 과정을 이수하며 C언어, C++, HTML, PHP 등 기본적인 프로그램 사용법을 습득하여 사용할 수 있게 되었으며 개발자라는 넓은 시야를 갖게 되었다.
 				</p>
 			</div>
 		</div>
