--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -5,112 +5,86 @@
 				<i class="fa fa-gears fa-5x"></i>  
 			</div>
 			<div class="col-md-6">
-				<h1>Skills</h1>
+				<h1>자격 및 능력</h1>
 			</div>
 		</div>		
 
 		<div class="row">
 			<div class="col-xs-12 col-sm-6 col-md-3">
-				<h3 class="skill-group">Back-end</h3>
+				<h3 class="skill-group">어학</h3>
 
 				<div class="progress">
-				  <div class="progress-bar" role="progressbar" data-transitiongoal="100"><span>PHP</span></div>
+				  <div class="progress-bar" role="progressbar" data-transitiongoal="60"><span>TOEIC</span></div>
 				</div>
 				<div class="progress">
-				  <div class="progress-bar" role="progressbar" data-transitiongoal="90"><span>Laravel</span></div>
+				  <div class="progress-bar" role="progressbar" data-transitiongoal="0"><span>TOPLE</span></div>
 				</div>
 				<div class="progress">
-				  <div class="progress-bar" role="progressbar" data-transitiongoal="90"><span>MySQL</span></div>
+				  <div class="progress-bar" role="progressbar" data-transitiongoal="0"><span>OPIC</span></div>
 				</div>
 				<div class="progress">
-				  <div class="progress-bar" role="progressbar" data-transitiongoal="50"><span>MongoDB</span></div>
+				  <div class="progress-bar" role="progressbar" data-transitiongoal="0"><span></span></div>
 				</div>
 				<div class="progress">
-				  <div class="progress-bar" role="progressbar" data-transitiongoal="75"><span>Apache</span></div>
+				  <div class="progress-bar" role="progressbar" data-transitiongoal="0"><span></span></div>
 				</div>
 				<div class="progress">
-				  <div class="progress-bar" role="progressbar" data-transitiongoal="50"><span>Codeception</span></div>
+				  <div class="progress-bar" role="progressbar" data-transitiongoal="0"><span></span></div>
 				</div>
 				<div class="progress">
-				  <div class="progress-bar" role="progressbar" data-transitiongoal="90"><span>WordPress</span></div>
+				  <div class="progress-bar" role="progressbar" data-transitiongoal="0"><span></span></div>
 				</div>
 			</div>
 
 			<div class="col-xs-12 col-sm-6 col-md-3">
-				<h3 class="skill-group">Front-end</h3>
+				<h3 class="skill-group">금융 및 보험</h3>
 
 				<div class="progress">
-				  <div class="progress-bar progress-bar-danger" role="progressbar" data-transitiongoal="100"><span>HTML5</span></div>
+				  <div class="progress-bar progress-bar-danger" role="progressbar" data-transitiongoal="60"><span>Soa-p</span></div>
 				</div>
 				<div class="progress">
-				  <div class="progress-bar progress-bar-danger" role="progressbar" data-transitiongoal="100"><span>CSS3</span></div>
+				  <div class="progress-bar progress-bar-danger" role="progressbar" data-transitiongoal="40"><span>Soa-FM</span></div>
 				</div>
 				<div class="progress">
-				  <div class="progress-bar progress-bar-danger" role="progressbar" data-transitiongoal="60"><span>SASS/LESS</span></div>
+				  <div class="progress-bar progress-bar-danger" role="progressbar" data-transitiongoal="30"><span>AFRK</span></div>
 				</div>
 				<div class="progress">
-				  <div class="progress-bar progress-bar-danger" role="progressbar" data-transitiongoal="90"><span>JavaScript</span></div>
+				  <div class="progress-bar progress-bar-danger" role="progressbar" data-transitiongoal="0"><span>CFRK</span></div>
 				</div>
 				<div class="progress">
-				  <div class="progress-bar progress-bar-danger" role="progressbar" data-transitiongoal="90"><span>jQuery</span></div>
+				  <div class="progress-bar progress-bar-danger" role="progressbar" data-transitiongoal="0"><span></span></div>
 				</div>
 				<div class="progress">
-				  <div class="progress-bar progress-bar-danger" role="progressbar" data-transitiongoal="100"><span>Twitter Bootstrap</span></div>
+				  <div class="progress-bar progress-bar-danger" role="progressbar" data-transitiongoal="0"><span></span></div>
 				</div>
 				<div class="progress">
-				  <div class="progress-bar progress-bar-danger" role="progressbar" data-transitiongoal="75"><span>Gulp</span></div>
+				  <div class="progress-bar progress-bar-danger" role="progressbar" data-transitiongoal="0"><span></span></div>
 				</div>
 			</div>
 
 			<div class="col-xs-12 col-sm-6 col-md-3">
-				<h3 class="skill-group">Foundational</h3>
+				<h3 class="skill-group">컴퓨터</h3>
 
 				<div class="progress">
-				  <div class="progress-bar progress-bar-warning" role="progressbar" data-transitiongoal="90"><span>Linux</span></div>
+				  <div class="progress-bar progress-bar-warning" role="progressbar" data-transitiongoal="70"><span>C언어</span></div>
 				</div>
 				<div class="progress">
-				  <div class="progress-bar progress-bar-warning" role="progressbar" data-transitiongoal="75"><span>Terminal</span></div>
+				  <div class="progress-bar progress-bar-warning" role="progressbar" data-transitiongoal="30"><span>C++</span></div>
 				</div>
 				<div class="progress">
-				  <div class="progress-bar progress-bar-warning" role="progressbar" data-transitiongoal="90"><span>MVC</span></div>
+				  <div class="progress-bar progress-bar-warning" role="progressbar" data-transitiongoal="50"><span>HTML</span></div>
 				</div>
 				<div class="progress">
-				  <div class="progress-bar progress-bar-warning" role="progressbar" data-transitiongoal="90"><span>OOP</span></div>
+				  <div class="progress-bar progress-bar-warning" role="progressbar" data-transitiongoal="30"><span>PHP</span></div>
 				</div>
 				<div class="progress">
-				  <div class="progress-bar progress-bar-warning" role="progressbar" data-transitiongoal="90"><span>AJAX</span></div>
+				  <div class="progress-bar progress-bar-warning" role="progressbar" data-transitiongoal="0"><span></span></div>
 				</div>
 				<div class="progress">
-				  <div class="progress-bar progress-bar-warning" role="progressbar" data-transitiongoal="90"><span>Security</span></div>
+				  <div class="progress-bar progress-bar-warning" role="progressbar" data-transitiongoal="0"><span></span></div>
 				</div>
 				<div class="progress">
-				  <div class="progress-bar progress-bar-warning" role="progressbar" data-transitiongoal="75"><span>Regular Expressions</span></div>
-				</div>
-			</div>
-
-			<div class="col-xs-12 col-sm-6 col-md-3">
-				<h3 class="skill-group">Tools</h3>
-
-				<div class="progress">
-				  <div class="progress-bar progress-bar-info" role="progressbar" data-transitiongoal="90"><span>Git</span></div>
-				</div>
-				<div class="progress">
-				  <div class="progress-bar progress-bar-info" role="progressbar" data-transitiongoal="90"><span>Vagrant</span></div>
-				</div>
-				<div class="progress">
-				  <div class="progress-bar progress-bar-info" role="progressbar" data-transitiongoal="90"><span>Composer</span></div>
-				</div>
-				<div class="progress">
-				  <div class="progress-bar progress-bar-info" role="progressbar" data-transitiongoal="50"><span>Bower</span></div>
-				</div>
-				<div class="progress">
-				  <div class="progress-bar progress-bar-info" role="progressbar" data-transitiongoal="90"><span>Jekyll</span></div>
-				</div>
-				<div class="progress">
-				  <div class="progress-bar progress-bar-info" role="progressbar" data-transitiongoal="75"><span>Photoshop</span></div>
-				</div>
-				<div class="progress">
-				  <div class="progress-bar progress-bar-info" role="progressbar" data-transitiongoal="75"><span>Google Analytics</span></div>
+				  <div class="progress-bar progress-bar-warning" role="progressbar" data-transitiongoal="0"><span></span></div>
 				</div>
 			</div>
 		</div>
