--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -13,9 +13,9 @@
 			<div class="col-md-3"></div>
 			<div class="col-md-6 well bs-component">
 
-				<form class="form-horizontal" method="post" action="////forms.brace.io/maksimovic991@gmail.com">
+				<form class="form-horizontal" method="post" action="////forms.brace.io/dnjs0309@naver.com">
 				  <fieldset>
-				    <legend>Send me a message</legend>
+				    <legend>편지 보내기</legend>
 				    <div class="form-group">
 				      <label for="inputEmail" class="col-lg-2 control-label">Email</label>
 				      <div class="col-lg-10">
