--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -36,7 +36,7 @@
 				    </div>				    
 				    <div class="form-group">
 				      <div class="col-lg-10 col-lg-offset-2">
-				        <button type="submit" class="btn btn-primary">SEND</button>				        
+				        <button type="submit" class="btn btn-primary">보내기</button>				        
 				      </div>
 				    </div>
 				    <input type="text" name="_gotcha" style="display:none" />
