--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -13,7 +13,7 @@
 					<div class="timeline">
                     <div class="timeline-head">
                       	<div class="profile-pic">
-		            		<img src="images/miroslav_maksimovic.jpg" alt="Miroslav Maksimović Profile Picture">
+		            		<img src="images/chowonjin.jpg" alt="chowonjin Profile Picture">
 		            	</div>
                     </div>
                     <div class="timeline-body">
