--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -11,10 +11,10 @@
     <div class="navbar-collapse collapse" id="navbar-main">
 		<ul class="nav navbar-nav">
 			<li><a href="#home" class="active"><i class="fa fa-home"></i> Home</a></li>
-			<li><a href="#profile"><i class="fa fa-male"></i> Profile</a></li>
-			<li><a href="#experience"><i class="fa fa-laptop"></i> Work Experience</a></li>
-			<li><a href="#education"><i class="fa fa-graduation-cap"></i> Education</a></li>
-			<li><a href="#skills"><i class="fa fa-gears"></i> Skills</a></li>
+			<li><a href="#profile"><i class="fa fa-male"></i> 프로필</a></li>
+			<li><a href="#experience"><i class="fa fa-laptop"></i> 장점</a></li>
+			<li><a href="#education"><i class="fa fa-graduation-cap"></i> 학력</a></li>
+			<li><a href="#skills"><i class="fa fa-gears"></i>자격 및 능력</a></li>
 			<li><a href="#contact"><i class="fa fa-envelope"></i> Contact</a></li>
 		</ul>
     </div>
