--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,6 @@
 
 
   <link rel="stylesheet" href="css/style.css">
-  <link rel="shortcut icon" href="favicon.ico" >
+  <link rel="shortcut icon" href="miroslav_maksimovic.jpg" >
   {% include analytics.html %}
 </head>
