--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -88,7 +88,7 @@
 				<div class="col-md-6">
 				
 				<div class="download-cv">
-					<a href="assets/Miroslav_Maksimovic_CV.pdf" target="_blank" class="btn btn-lg btn-info"><i class="fa fa-cloud-download"></i> 자기소개서 다운받기 [PDF]</a>
+					<a href="assets/Miroslav_Maksimovic_CV.pdf" target="_blank" class="btn btn-lg btn-info"><i class="fa fa-cloud-download"></i> 자기소개서 다운로드 [PDF]</a>
 				</div>
 
 				<div class="profile-summary">
