--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
   <div class="container">
   <div class="row">
     <div class="col-md-3">
-      <p style="margin-top: 15px;">Miroslav Maksimovic ©&nbsp;2014</p>
+      <p style="margin-top: 15px;">Miroslav Maksimovic ©&nbsp;2014<br>사용(조원진)</p>
     </div>
     <div class="col-md-3"></div>
     <div class="col-md-6">
