--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
       <div class="col-md-10 col-lg-10">
               <h1 class="cover-heading">안녕하세요! <span>조원진입니다!</span></h1>
 
-              <h3 class="cover-profession">제주대학교 경제학과</h3>
+              <h3 class="cover-profession">간단한 자기소개</h3>
           </div>
           <div class="col-md-1 col-lg-1"></div>
       </div>
@@ -15,6 +15,12 @@
 
             <div class="cover-description">
                 <p>저는 경제학과 3학년 조원진입니다. 늦은 시기에 프로그래밍에 관심을 갖게 되어서 컴퓨터공학과를 복수전공으로 듣게 되었습니다.저에 대한 더 자새한 내용은 <a href="#profile">프로필</a>을 확인해 주시길 바랍니다.</p>
+		            * 이름 : 조원진  
+                * 주소 : 인천광역시 서구  
+                * 취미 : 여행, 수영  
+                * 학력 : 대인고 졸업  
+                * 제주대 경제학과  
+                * E-mail : dnjs0309@naver.com  
               </div>        
 
               <ul class="social">
