--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,10 @@
+  	           	* 이름 : 조원진  
+                * 이름 : 조원진
+                * 주소 : 인천광역시 서구
+                * 취미 : 여행, 수영
+                * 학력 : 대인고 졸업
+                * 제주대 경제학과
+                * E-mail : dnjs0309@naver.com
 <header id="home">
   <div class="container">
     <div class="row">
