--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,31 @@
-  	           	* 이름 : 조원진  
-                * 이름 : 조원진
-                * 주소 : 인천광역시 서구
-                * 취미 : 여행, 수영
-                * 학력 : 대인고 졸업
-                * 제주대 경제학과
-                * E-mail : dnjs0309@naver.com
+
+Name: *_조원진_*<br>
+Student ID: 2011103280<br>
+Github URL: **https://github.com/dnjs0309**<br>
+## 구독하는 오픈소스 저장소
+
+1. [Economice](https://github.com/dnjs0309/Comparison-Programming-Languages-Economics)  
+2. [Opensource-class](https://github.com/dnjs0309/opensource-class)  
+3. [linux](https://github.com/dnjs0309/linux)  
+4. [R-languages](https://github.com/dnjs0309/R)  
+5. [C++](https://github.com/dnjs0309/cocos2d-x)  
+
+### 좋아하는 오픈소스 저장소
+
+1. [Economice](https://github.com/dnjs0309/Comparison-Programming-Languages-Economics)  
+2. [Opensource-class](https://github.com/dnjs0309/opensource-class)  
+3. [linux](https://github.com/dnjs0309/linux)  
+4. [R-languages](https://github.com/dnjs0309/R)  
+5. [C++](https://github.com/dnjs0309/cocos2d-x)  
+
+#### 포킹한 오픈소스 저장소
+
+1. [Economice](https://github.com/dnjs0309/Comparison-Programming-Languages-Economics)  
+2. [Opensource-class](https://github.com/dnjs0309/opensource-class)  
+3. [linux](https://github.com/dnjs0309/linux)  
+4. [R-languages](https://github.com/dnjs0309/R)  
+5. [C++](https://github.com/dnjs0309/cocos2d-x)  
+
 <header id="home">
   <div class="container">
     <div class="row">
