--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
   {% include skills.html %}
   {% include contact.html %}
   {% include footer.html %}
+  {% include markdown.md %}
   
   <a href="#home" class="back-to-top"></a>  
   
