--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,7 +14,7 @@
           <div class="col-md-8">
 
             <div class="cover-description">
-                <p>저는 경제학과 3학년 조원진입니다. 늦은 시기에 프로그래밍에 관심을 갖게 되어서 컴퓨터공학과를 복수전공으로 듣게 되었습니다.저에 대한 더 자새한 내용은 <a href="#profile">프로필</a>을 확인해 주시길 바랍니다.</p>
+                <p>저는 경제학과 3학년 조원진입니다. 늦은 시기에 프로그래밍에 관심을 갖게 되어서 컴퓨터공학과를 복수전공으로 듣게 되었습니다.저에 대한 더 자세한 내용은 <a href="#profile">프로필</a>을 확인해 주시길 바랍니다. 마크다운으로 만든 자기소개서 또한 <a href="#profile">프로필</a>에서 마크다운 자기소개서 보기로 확인하실 수 있습니다.</p>
 
               </div>        
 
