--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -90,7 +90,9 @@
 				<div class="download-cv">
 					<a href="assets/Miroslav_Maksimovic_CV.pdf" target="_blank" class="btn btn-lg btn-info"><i class="fa fa-cloud-download"></i> 자기소개서 다운로드 [PDF]</a>
 				</div>
-				
+				<div class="download-cv">
+					<a href="https://github.com/dnjs0309/dnjs0309.github.io/blob/master/markdown.md" target="_blank" class="btn btn-lg btn-info"> 자기소개서 다운로드 [PDF]</a>
+				</div>
 				<div class="profile-summary">
 	              <p>
 		            금융과 IT의 융합, 핀테크에 대한 무한한 관심을 가지고 있는 경제학과 3학년 조원진입니다.<br>
