--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -85,13 +85,13 @@
                     </div>
                   </div><!-- TIMELINE -->
 				</div>
-				<div class="col-md-6">
+				<div class="col-md-3">
 				
 				<div class="download-cv">
 					<a href="assets/Miroslav_Maksimovic_CV.pdf" target="_blank" class="btn btn-lg btn-info"><i class="fa fa-cloud-download"></i> 자기소개서 다운로드 [PDF]</a>
 				</div>
 				<div class="download-cv">
-					<a href="https://github.com/dnjs0309/dnjs0309.github.io/blob/master/markdown.md" target="_blank" class="btn btn-lg btn-info"> 자기소개서 다운로드 [PDF]</a>
+					<a href="https://github.com/dnjs0309/dnjs0309.github.io/blob/master/markdown.md" target="_blank" class="btn btn-lg btn-info"><i class="fa fa-cloud-download"></i>Markdown 자기소개서 보기</a>
 				</div>
 				<div class="profile-summary">
 	              <p>
